# pid_fan_controller

./: Cargo.toml  README.md  full_power.yaml  pid-fan-controller-sleep-hook.service  pid-fan-controller.service  pid_fan_controller_config.yaml
src/: config.rs  error.rs  main.rs  options.rs
